@@ -2,6 +2,12 @@
 
 	* unichrome/via_driver.c: (VIAEnterVT):
 
+	Initialize the AGP ring buffer before command submission.
+
+2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
+
+	* unichrome/via_driver.c: (VIAEnterVT):
+
 	Blank and clear screen when entering VT.
 	
 2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
